test/files/pos/t6601/PrivateValueClass_1.scala
class V private (val a: Any) extends AnyVal