test/files/neg/t6601/PrivateConstructor_1.scala
class PrivateConstructor private(val s: String) extends AnyVal
